manifests/victoriametrics/karma.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: monitoring
  labels:
    app: karma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karma
  template:
    metadata:
      labels:
        app: karma
    spec:
      containers:
      - name: karma
        image: lmierzwa/karma:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/karma
          subPath: karma.yml
        resources:
            requests:
              memory: "512Mi"
              cpu: "0.2"
            limits:
              memory: "1Gi"
              cpu: "0.5"
      volumes:
      - name: config-volume
        configMap:
          name: karma-config

---
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
  labels:
    app: karma
spec:
  selector:
    app: karma
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: dev-ca-issuer
    cert-manager.io/common-name: karma.dpetrenko.ru
    cert-manager.io/subject-organizations: "home dev lab"
    cert-manager.io/subject-countries: "RU"
    cert-manager.io/subject-localities: "Voronezh"
    cert-manager.io/duration: "9125h"
    cert-manager.io/renew-before: "360h"
    cert-manager.io/usages: "server auth"
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-encoding: "PKCS8"
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: karma.dpetrenko.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: karma
            port:
              number: 8080
