manifests/victoriametrics/vm-agent.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vm-agent
  namespace: monitoring
  labels:
    app: vm-agent
spec:
  selector:
    app: vm-agent
  ports:
    - protocol: TCP
      port: 8429
      targetPort: 8429

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-agent
  namespace: monitoring
  labels:
    app: vm-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vm-agent
  template:
    metadata:
      labels:
        app: vm-agent
    spec:
      containers:
        - name: vm-agent
          image: victoriametrics/vmagent:v1.66.1
          ports:
            - containerPort: 8429
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.2"
              ephemeral-storage: "1Gi"
            limits:
              memory: "1Gi"
              cpu: "0.5"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config
          args:
            - -promscrape.config=/config/vmagent.yaml
            - -remoteWrite.url=http://vm-single.monitoring:8428/api/v1/write  # Укажите URL вашего vm-single
      volumes:
        - name: config
          configMap:
            name: vm-agent-config


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-agent
  namespace: monitoring
  labels:
    app: vm-agent
    section: monitoring
  annotations:
    cert-manager.io/cluster-issuer: dev-ca-issuer
    cert-manager.io/common-name: vm-agent.dpetrenko.ru
    cert-manager.io/subject-organizations: "home dev lab"
    cert-manager.io/subject-countries: "RU"
    cert-manager.io/subject-localities: "Voronezh"
    cert-manager.io/duration: "9125h"
    cert-manager.io/renew-before: "360h"
    cert-manager.io/usages: "server auth"
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-encoding: "PKCS8"
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: "system-ingress"
  rules:
    - host: vm-agent.dpetrenko.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vm-agent
                port:
                  number: 8429
  tls:
    - hosts:
      - vm-agent.dpetrenko.ru
      secretName: victoria-agent-tls
