manifests/victoriametrics/vm-singl.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring

---
apiVersion: v1
kind: Service
metadata:
  name: vm-sigle
  namespace: monitoring
  labels:
    app: vm-sigle
spec:
  selector:
    app: vm-sigle
  ports:
    - protocol: TCP
      port: 8428
      targetPort: 8428

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-sigle
  namespace: monitoring
  labels:
    app: vm-sigle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vm-sigle
  template:
    metadata:
      labels:
        app: vm-sigle
    spec:
      containers:
        - name: vm-sigle
          image: victoriametrics/victoria-metrics:v1.66.1
          ports:
            - containerPort: 8428
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: data
              mountPath: /storage
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: victoria-metrics-pvc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-sigle
  namespace: monitoring
  labels:
    app: vm-sigle
    section: vm-sigle
  annotations:
    cert-manager.io/cluster-issuer: dev-ca-issuer
    cert-manager.io/common-name: vm.dpetrenko.ru
    cert-manager.io/subject-organizations: "home dev lab"
    cert-manager.io/subject-countries: "RU"
    cert-manager.io/subject-localities: "Voronezh"
    cert-manager.io/duration: "9125h"
    cert-manager.io/renew-before: "360h"
    cert-manager.io/usages: "server auth"
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-encoding: "PKCS8"
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  ingressClassName: "system-ingress"
  rules:
    - host: vm.dpetrenko.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vm-sigle
                port:
                  number: 8428
  tls:
    - hosts:
      - vm.dpetrenko.ru
      secretName: vm-sigle-tls
